--- a/pom.xml
+++ b/pom.xml
@@ -50,7 +50,11 @@
       <artifactId>mariadb-java-client</artifactId>
       <version>3.3.3</version>
     </dependency>
-
+    <dependency>
+      <groupId>org.netbeans.external</groupId>
+      <artifactId>AbsoluteLayout</artifactId>
+      <version>RELEASE260</version>
+    </dependency>
   </dependencies>
 
   <build>
