--- a/pom.xml
+++ b/pom.xml
@@ -55,6 +55,13 @@
       <artifactId>AbsoluteLayout</artifactId>
       <version>RELEASE260</version>
     </dependency>
+    <dependency>
+      <groupId>org.projectlombok</groupId>
+      <artifactId>lombok</artifactId>
+      <version>1.18.32</version>
+      <scope>provided</scope>
+    </dependency>
+
   </dependencies>
 
   <build>
