--- a/pom.xml
+++ b/pom.xml
@@ -51,6 +51,11 @@
       <version>3.3.3</version>
     </dependency>
     <dependency>
+      <groupId>org.mindrot</groupId>
+      <artifactId>jbcrypt</artifactId>
+      <version>0.4</version>
+    </dependency>
+    <dependency>
       <groupId>org.netbeans.external</groupId>
       <artifactId>AbsoluteLayout</artifactId>
       <version>RELEASE260</version>
